<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <GVL Name="TESTER_C8_VAR" Id="{820621fc-0922-44ab-b083-dc48b156c1d8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
C8_MACHINE_POSITION : T_MACHINE_POSITION;
C8_MACHINE_POSITION_TAKE : T_MACHINE_POSITION;

I_C8_JIG_PRESENCE AT %IX204.7 : BOOL;
O_G6_FINISH_SCANBARCODE AT %QX202.0 : BOOL;

C8_STATE_1 	AT %IB200 : BYTE;
C8_STATE_2 	AT %IB201 : BYTE;
C8_ERROR_1 	AT %IB202 : BYTE;
C8_ERROR_2 	AT %IB203 : BYTE;
C8_INPUT_1 	AT %IB204 : BYTE;

C8_CONTROL_1 AT %QB200 : BYTE;
C8_CONTROL_2 AT %QB201 : BYTE;
C8_CONTROL_3 AT %QB202 : BYTE;
C8_INDEX_POSITION AT %QB203 : BYTE;
C8_MOVEMENT_SOURCE AT %QB204 : BYTE ;
C8_MOVEMENT_DESTINATION AT %QB205 : BYTE ;

I_C8_READY  AT %IX200.0 :BOOL;
I_C8_RUNNING  AT %IX200.1 :BOOL;
I_C8_PAUSED  AT %IX200.2 :BOOL;
I_C8_ERROR  AT %IX200.3 :BOOL;
I_C8_ESTOPON  AT %IX200.4 :BOOL;
I_C8_SAFEGUARDON  AT %IX200.5 :BOOL;
I_C8_SERROR  AT %IX200.6 :BOOL;
I_C8_WARNING  AT %IX200.7 :BOOL;

I_C8_MOTORON  AT %IX201.0 :BOOL;
I_C8_ATHOME  AT %IX201.1 :BOOL;
I_C8_AUTOMODE  AT %IX201.5 :BOOL;
I_C8_TEACHMODE  AT %IX201.6 :BOOL;

I_C8_GRIPPER AT %IX204.0 : BOOL;
I_C8_FREE AT %IX204.1 : BOOL;
I_C8_READY_SCAN AT %IX204.2 : BOOL;
I_C8_ROTATE_INDEXING_2 AT %IX204.3 : BOOL;
I_C8_MCAL_REQUEST AT %IX204.4 : BOOL;
O_C8_GRIPPER_CLOSE AT %Q*: BOOL;
O_C8_GRIPPER_OPEN AT %Q* : BOOL;
	
	O_G6_START AT %QX200.0  : BOOL;	
	O_G6_SELPROG1 AT %QX200.1  : BOOL;
	O_G6_SELPROG2 AT %QX200.2  : BOOL;
	O_G6_SELPROG4 AT %QX200.3  : BOOL;
	O_G6_STOP AT %QX200.4  : BOOL;
	O_G6_PAUSE AT %QX200.5  : BOOL;
	O_G6_CONTINUE AT %QX200.6  : BOOL;
	O_G6_RESET AT %QX200.7  : BOOL;	
	
	O_G6_SETMOTORON AT %QX201.0  : BOOL;
	O_G6_SETMOTOROFF AT %QX201.1  : BOOL;
	O_G6_HOME AT %QX201.2  : BOOL;
	O_G6_SHUTDOWN AT %QX201.3  : BOOL;
	O_G6_MCAL AT %QX201.4  : BOOL;
	O_G6_SELROBOT AT %QX201.5  : BOOL;
	O_G6_SELROBOT_1 AT %QX201.6  : BOOL;
	O_G6_SELROBOT_2 AT %QX201.7  : BOOL;
	
	

O_C8_ENABLE :BOOL :=TRUE;
C8_PUTON: BOOL;
C8_TAKING: BOOL;
C8_TRANSFER: BOOL;
C8_ONDUTY:BOOL;
C8_START_MOVING :BOOL;

READY_INDEXING :BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>