<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="INPUT_PROG" Id="{7d3e32e0-a112-4fce-b916-38fc5ef65b77}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM INPUT_PROG
VAR
	T1: TON;
	
	T2: TON;
	Q: BOOL;
	OUT1: BOOL;
	AR: R_TRIG;
	LOTBOX_STAT: BOOL;
	RTRIG_1: F_TRIG;
	RTRIG_2: F_TRIG;
	RTRIG_3: F_TRIG;
	RTRIG_4: F_TRIG;
	QUEUE_INDEX_1: INT;
	QUEUE_INDEX_2: INT;
	QUEUE_INDEX_3: INT;
	QUEUE_INDEX_4: INT;
	IC_CASE: INT;
	TMR1: TON;
	TMR2: TON;
	I_STOPPER_TRANSFER_A: INT;
	TMR3: TON;
	TMR4: TON;
	TMR5: TON;
	TMR6: TON;
	TMR7: TON;
	TMR8: TON;
	TMR9: TON;
	TMR10: TON;
	TMR11: TON;
	TMR12: TON;
	TMR14: TON;
	COUNTER_1: CTU;
	RESET_COUNTER: BOOL;
	COUNTER_2: CTU;
	PULS1: TON;
	PULSE_OUT1: TON;
	TP1: TON;
	PULSE_OUT2: TON;
	PULS2: TON;
	PULS3: TON;
	CNTFUKUDA: BYTE;
	CNTFUKUDAB: BYTE;
	CNTFUKUDAA: BYTE;
	LOTBOX_TEMPI1: INT;
	LOTBOX_TEMPI2: INT;
	LOTBOX_TEMPI3: INT;
	LOTBOX_TEMPI4: INT;
	LOTBOX_ACCI: INT;
END_VAR

VAR PERSISTENT
	AR_TRIG: R_TRIG;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
IF CNTFUKUDAA >=20 THEN
	//INPUT_VAR.I_FUKUDA_TRANSFER_A_PICK_DONE:=TRUE;
	CNTFUKUDAA:=0;
	ELSE
	CNTFUKUDAA:=INPUT_G6_VAR.COUNTER_FUKUDA_A;
END_IF

IF CNTFUKUDAB >=20 THEN
	//INPUT_VAR.I_FUKUDA_TRANSFER_B_PICK_DONE:=TRUE;
	CNTFUKUDAB:=0;
	ELSE
	CNTFUKUDAB:=INPUT_G6_VAR.COUNTER_FUKUDA_B;
END_IF


IF NOT INPUT_VAR.I_LOTBOX_DETECT_1 OR NOT INPUT_VAR.I_LOTBOX_DETECT_2 OR NOT INPUT_VAR.I_LOTBOX_DETECT_3 OR NOT INPUT_VAR.I_LOTBOX_DETECT_4 THEN
	INPUT_VAR.O_TOWER_LAMP_YELLOW :=TRUE;
END_IF 


IF FLAG_VAR.ALLOW_EXECUTE_LOAD_FUKUDA THEN 
	IF INPUT_VAR.I_CASE=100 OR INPUT_VAR.I_CASE=12 THEN
		INPUT_VAR.I_CASE:=0;
		IC_CASE:=0;	
		END_IF			
	LOAD_FUKUDA();
END_IF
IF FLAG_VAR.ALLOW_EXECUTE_RETURN_FUKUDA THEN 
	IF INPUT_VAR.I_CASE=100 THEN
		INPUT_VAR.I_CASE:=0;
		IC_CASE:=0;
	END_IF	
	RETURN_FUKUDA();	
END_IF

(*
TMR4(IN:=INPUT_VAR.I_FUKUDA_TRANSFER_AT_FRONT_B,PT:= T#2S);
TMR5(IN:=INPUT_VAR.I_STOPPER_TRANSFER_ON_B,PT:=T#2S);
TMR6(IN:=INPUT_G6_VAR.O_G6_SELECT_FUKUDA_B,PT:=T#10S);

INPUT_VAR.O_STOPPER_TRANSFER_B:=TMR4.Q;
INPUT_G6_VAR.O_G6_SELECT_FUKUDA_B:=TMR5.Q;
*)

//END_IF
//LOTBOX_STAT := INPUT_VAR.I_LOTBOX_DETECT_1 + INPUT_VAR.I_LOTBOX_DETECT_2 + INPUT_VAR.I_LOTBOX_DETECT_3 + INPUT_VAR.I_LOTBOX_DETECT_4 


//INPUT_G6_VAR.I_G6_HOME:=POWER_CONTROL.O_PWR_CTRL_ROBOT_G6;
//INDEXING1_VAR.I_INDEXING_HOME := POWER_CONTROL.O_PWR_CTRL_INDEXING_1;

RTRIG_1(CLK :=INPUT_VAR.I_LOTBOX_DETECT_1);
RTRIG_2(CLK :=INPUT_VAR.I_LOTBOX_DETECT_2);
RTRIG_3(CLK :=INPUT_VAR.I_LOTBOX_DETECT_3);
RTRIG_4(CLK :=INPUT_VAR.I_LOTBOX_DETECT_4);
(*
IF RTRIG_1.Q THEN
	IF QUEUE_INDEX_1 =0  THEN
		QUEUE_INDEX_1 :=1;
	ELSIF QUEUE_INDEX_2 =0 THEN
		QUEUE_INDEX_2 :=1;
	ELSIF QUEUE_INDEX_3 =0 THEN
		QUEUE_INDEX_3 :=1;
	ELSIF QUEUE_INDEX_4 =0 THEN
		QUEUE_INDEX_4 :=1;
	END_IF	
	INPUT_VAR.O_LOTBOX_CLAMP_ON_1:=TRUE;
	INPUT_VAR.O_LOTBOX_CLAMP_OFF_1:=FALSE;
ELSIF RTRIG_2.Q THEN
	IF QUEUE_INDEX_1 =0  THEN
		QUEUE_INDEX_1 :=2;
	ELSIF QUEUE_INDEX_2 =0 THEN
		QUEUE_INDEX_2 :=2;
	ELSIF QUEUE_INDEX_3 =0 THEN
		QUEUE_INDEX_3 :=2;
	ELSIF QUEUE_INDEX_4 =0 THEN
		QUEUE_INDEX_4 :=2;
	END_IF
	INPUT_VAR.O_LOTBOX_CLAMP_ON_2:=TRUE;
	INPUT_VAR.O_LOTBOX_CLAMP_OFF_2:=FALSE;
ELSIF RTRIG_3.Q THEN
	IF QUEUE_INDEX_1 =0  THEN
		QUEUE_INDEX_1 :=3;
	ELSIF QUEUE_INDEX_2 =0 THEN
		QUEUE_INDEX_2 :=3;
	ELSIF QUEUE_INDEX_3 =0 THEN
		QUEUE_INDEX_3 :=3;
	ELSIF QUEUE_INDEX_4 =0 THEN
		QUEUE_INDEX_4 :=3;
	END_IF	
	INPUT_VAR.O_LOTBOX_CLAMP_ON_3:=TRUE;
	INPUT_VAR.O_LOTBOX_CLAMP_OFF_3:=FALSE;
ELSIF RTRIG_4.Q THEN
	IF QUEUE_INDEX_1 =0  THEN
		QUEUE_INDEX_1 :=4;
	ELSIF QUEUE_INDEX_2 =0 THEN
		QUEUE_INDEX_2 :=4;
	ELSIF QUEUE_INDEX_3 =0 THEN
		QUEUE_INDEX_3 :=4;
	ELSIF QUEUE_INDEX_4 =0 THEN
		QUEUE_INDEX_4 :=4;
	END_IF	
	INPUT_VAR.O_LOTBOX_CLAMP_ON_4:=TRUE;
	INPUT_VAR.O_LOTBOX_CLAMP_OFF_4:=FALSE;	
END_IF

IF NOT INPUT_VAR.I_LOTBOX_DETECT_1 THEN
	QUEUE_INDEX_1 :=0;
END_IF
IF NOT INPUT_VAR.I_LOTBOX_DETECT_2 THEN
	QUEUE_INDEX_2 :=0;
END_IF
IF NOT INPUT_VAR.I_LOTBOX_DETECT_3 THEN
	QUEUE_INDEX_3 :=0;
END_IF
IF NOT INPUT_VAR.I_LOTBOX_DETECT_4 THEN
	QUEUE_INDEX_4 :=0;
END_IF

IF INPUT_VAR.I_LOTEND THEN
	INPUT_VAR.O_LOTBOX_CLAMP_ON_1:=FALSE;
	INPUT_VAR.O_LOTBOX_CLAMP_ON_2:=FALSE;
	INPUT_VAR.O_LOTBOX_CLAMP_ON_3:=FALSE;
	INPUT_VAR.O_LOTBOX_CLAMP_ON_4:=FALSE;
	INPUT_VAR.O_LOTBOX_CLAMP_OFF_1:=TRUE;
	INPUT_VAR.O_LOTBOX_CLAMP_OFF_2:=TRUE;
	INPUT_VAR.O_LOTBOX_CLAMP_OFF_3:=TRUE;
	INPUT_VAR.O_LOTBOX_CLAMP_OFF_4:=TRUE;
			
END_IF
*)	
 
(*
INPUT_VAR.O_STOPPER_TRANSFER_A:=TMR11.Q ;
INPUT_VAR.O_STOPPER_TRANSFER_B:=TMR12.Q ;

TMR14(IN:=INPUT_G6_VAR.I_G6_END_FUKUDA,PT:=T#10S);
IF NOT TMR14.Q AND INPUT_G6_VAR.I_G6_END_FUKUDA THEN
	TMR11(IN:=FALSE);
	TMR12(IN:=FALSE);
ELSE
	TMR11(IN:=INPUT_VAR.I_FUKUDA_TRANSFER_AT_FRONT_A,PT:=T#2S);	
	TMR12(IN:=INPUT_VAR.I_FUKUDA_TRANSFER_AT_FRONT_B,PT:=T#2S);

END_IF
 

 IF INPUT_G6_VAR.I_G6_END_FUKUDA AND NOT INPUT_VAR.ACTIVE_PROGRAM_CHANGE THEN
	INPUT_VAR.ACTIVE_PROGRAM:=INPUT_VAR.ACTIVE_PROGRAM+1;
	IF INPUT_VAR.ACTIVE_PROGRAM=3 THEN
		INPUT_VAR.ACTIVE_PROGRAM:=1;
	END_IF
	INPUT_VAR.ACTIVE_PROGRAM_CHANGE:=TRUE;
 END_IF

 COUNTER_1(CU:=INPUT_G6_VAR.I_G6_END_CYCLE,RESET:=INPUT_G6_VAR.O_G6_START,PV:=14);
IF COUNTER_1.CV =1 THEN
	INPUT_VAR.ACTIVE_PROGRAM_CHANGE:=FALSE;
END_IF
 
*)
PULS1(IN:=NOT PULS2.Q,PT:=T#0.5S);
PULS2(IN:=PULS1.Q,PT:=T#0.5S);
IF INPUT_VAR.I_LOTBOX_DETECT_1 THEN
	INPUT_VAR.O_LOT_BOX_INDICATOR_1:=PULS1.Q;
	LOTBOX_TEMPI1:=1;
ELSE
	INPUT_VAR.O_LOT_BOX_INDICATOR_1:=FALSE;
	LOTBOX_TEMPI1:=0;
END_IF

IF INPUT_VAR.I_LOTBOX_DETECT_2 THEN
	INPUT_VAR.O_LOT_BOX_INDICATOR_2:=PULS1.Q;
	LOTBOX_TEMPI2:=1;
	ELSE
	LOTBOX_TEMPI2:=0;
	INPUT_VAR.O_LOT_BOX_INDICATOR_2:=FALSE;
END_IF

IF INPUT_VAR.I_LOTBOX_DETECT_3 THEN
	INPUT_VAR.O_LOT_BOX_INDICATOR_3:=PULS1.Q;
	LOTBOX_TEMPI3:=1;
	ELSE
	INPUT_VAR.O_LOT_BOX_INDICATOR_3:=FALSE;
	LOTBOX_TEMPI3:=0;
END_IF

IF INPUT_VAR.I_LOTBOX_DETECT_4 THEN
	INPUT_VAR.O_LOT_BOX_INDICATOR_4:=PULS1.Q;
	LOTBOX_TEMPI4:=1;
	ELSE
	INPUT_VAR.O_LOT_BOX_INDICATOR_4:=FALSE;
	LOTBOX_TEMPI4:=0;
END_IF
LOTBOX_ACCI:=LOTBOX_TEMPI1 +LOTBOX_TEMPI2+LOTBOX_TEMPI3+LOTBOX_TEMPI4;

//IF LOTBOX_ACCI >=3 THEN
IF INPUT_G6_VAR.I_G6_MOTORON AND INDEXING_2_VAR.I_INDEXING_2_HOME AND  LOADER_RS4_VAR.I_LOADER_RS4_MOTORON AND INDEXING_1_VAR.I_INDEXING_1_HOME AND SORTER_RS4_VAR.I_SORTER_RS4_MOTORON AND TESTER_C8_VAR.I_C8_MOTORON THEN
	INPUT_VAR.O_TOWER_LAMP_GREEN :=TRUE;
	INPUT_VAR.O_TOWER_LAMP_RED :=FALSE;
	
	SORTER_VAR.O_TOWER_LAMP_GREEN :=TRUE;
	SORTER_VAR.O_TOWER_LAMP_RED :=FALSE;
ELSE
	INPUT_VAR.O_TOWER_LAMP_RED :=TRUE;
	INPUT_VAR.O_TOWER_LAMP_GREEN :=FALSE;
	
	SORTER_VAR.O_TOWER_LAMP_GREEN :=FALSE;
	SORTER_VAR.O_TOWER_LAMP_RED :=TRUE;
END_IF
IF LOTBOX_ACCI =2 OR LOTBOX_ACCI =1 THEN
	INPUT_VAR.O_TOWER_LAMP_YELLOW :=PULS1.Q;
END_IF
IF INPUT_VAR.ALARM1 THEN
	INPUT_VAR.O_TOWER_LAMP_YELLOW :=PULS1.Q;
	SORTER_VAR.O_TOWER_LAMP_YELLOW :=PULS1.Q;
	//INPUT_VAR.O_TOWER_LAMP_BUZZER :=TRUE;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="INPUT_PROG">
      <LineId Id="622" Count="0" />
      <LineId Id="614" Count="0" />
      <LineId Id="634" Count="0" />
      <LineId Id="627" Count="1" />
      <LineId Id="620" Count="0" />
      <LineId Id="611" Count="0" />
      <LineId Id="617" Count="1" />
      <LineId Id="633" Count="0" />
      <LineId Id="630" Count="1" />
      <LineId Id="621" Count="0" />
      <LineId Id="612" Count="1" />
      <LineId Id="9" Count="2" />
      <LineId Id="497" Count="0" />
      <LineId Id="159" Count="0" />
      <LineId Id="484" Count="0" />
      <LineId Id="367" Count="12" />
      <LineId Id="13" Count="0" />
      <LineId Id="183" Count="2" />
      <LineId Id="195" Count="0" />
      <LineId Id="243" Count="0" />
      <LineId Id="186" Count="0" />
      <LineId Id="200" Count="0" />
      <LineId Id="199" Count="0" />
      <LineId Id="326" Count="0" />
      <LineId Id="251" Count="0" />
      <LineId Id="176" Count="0" />
      <LineId Id="14" Count="19" />
      <LineId Id="128" Count="1" />
      <LineId Id="34" Count="9" />
      <LineId Id="130" Count="1" />
      <LineId Id="44" Count="9" />
      <LineId Id="132" Count="1" />
      <LineId Id="54" Count="9" />
      <LineId Id="134" Count="1" />
      <LineId Id="64" Count="14" />
      <LineId Id="80" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="116" Count="2" />
      <LineId Id="123" Count="4" />
      <LineId Id="115" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="327" Count="0" />
      <LineId Id="329" Count="1" />
      <LineId Id="158" Count="0" />
      <LineId Id="380" Count="0" />
      <LineId Id="422" Count="0" />
      <LineId Id="424" Count="0" />
      <LineId Id="430" Count="0" />
      <LineId Id="426" Count="3" />
      <LineId Id="425" Count="0" />
      <LineId Id="423" Count="0" />
      <LineId Id="382" Count="0" />
      <LineId Id="389" Count="0" />
      <LineId Id="392" Count="0" />
      <LineId Id="397" Count="0" />
      <LineId Id="399" Count="2" />
      <LineId Id="398" Count="0" />
      <LineId Id="394" Count="0" />
      <LineId Id="402" Count="0" />
      <LineId Id="404" Count="0" />
      <LineId Id="408" Count="1" />
      <LineId Id="406" Count="0" />
      <LineId Id="383" Count="0" />
      <LineId Id="729" Count="1" />
      <LineId Id="683" Count="33" />
      <LineId Id="794" Count="0" />
      <LineId Id="717" Count="0" />
      <LineId Id="796" Count="0" />
      <LineId Id="799" Count="2" />
      <LineId Id="718" Count="1" />
      <LineId Id="797" Count="0" />
      <LineId Id="802" Count="2" />
      <LineId Id="720" Count="0" />
      <LineId Id="731" Count="1" />
      <LineId Id="734" Count="0" />
      <LineId Id="721" Count="0" />
      <LineId Id="738" Count="0" />
      <LineId Id="740" Count="0" />
      <LineId Id="798" Count="0" />
      <LineId Id="739" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>